--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: "Roman Bushuiev – Personal Page" # the website title (if blank, full name will be used instead)
+title: "Roman Bushuiev" # the website title (if blank, full name will be used instead)
 first_name: Roman
 middle_name:
 last_name: Bushuiev
